fix: 前後台使用各自的 css js，前台 bootstrap 3、後台 bootstrap 4

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,13 @@
+/* Font */
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
 // Variables
 @import 'variables';
 
-.toolbox{
-    margin-bottom: 10px;
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
+
+.navbar-laravel {
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
